--- a/latex/tex/A_Plan_proyecto.tex
+++ b/latex/tex/A_Plan_proyecto.tex
@@ -9,7 +9,7 @@ Se ha decidido seguir la metodología \emph{SCRUM} para la gestión del proyecto
 	\item El desarrollo se ha basado en ciclos o iteraciones denominadas \emph{sprints}.
 	\item La duración estimada de cada \emph{sprint} es de 2 semanas.
 	\item Los \emph{sprints} están formados por las tareas completadas.
-	\item A las tareas se les establece una estimación temporal en función de su dificultad. Esto se define mediante \emph{story points}.
+	\item A las tareas se las establece una estimación temporal en función de su dificultad. Esto se define mediante \emph{story points}.
 	\item Las tareas a realizar se deciden en la planificación del \emph{sprint}.
 	\item Al finalizar un \emph{sprint} se genera un entregable o incremento del producto.
 \end{itemize}
@@ -88,7 +88,7 @@ Sueldo bruto mensual & 2.866€\\
 \textbf{Total de 6 meses} & \textbf{17.196€}\\
 }
 
-\subsubsection{Coster \emph{software}}
+\subsubsection{Costes \emph{software}}
 La herramientas y el \emph{software} empleado para realizar el proyecto no han supuesto ningún coste
 ya que eran gratuitas.
 
