--- a/latex/tex/D_Manual_programador.tex
+++ b/latex/tex/D_Manual_programador.tex
@@ -17,7 +17,7 @@ Como este proyecto se integra en otro, solo se van a enumerar los directorios ut
 	\item \texttt{/src/main/resources/messages/}: ficheros de internacionalización de textos.
 	\item \texttt{/src/main/resources/view/}: fichero FXML usados por JavaFX para la interfaz gráfica.
 	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/}: directorio donde se encuentran todos los ficheros Java.
-	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/clustering}: directorio que incluye los ficheros java de este proyecto.
+	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/clustering}: directorio que incluye los ficheros Java de este proyecto.
 	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/clustering/algorithm}: incluye los diferentes algoritmos de \emph{clustering}.
 	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/clustering/analysis}: incluye los diferentes tipos de análisis de clústeres.
 	\item \texttt{/src/main/java/es/ubu/lsi/ubumonitor/clustering/chart}: incluye las clases que gestionan las gráficas.
@@ -57,7 +57,7 @@ Para instalar la distribución de Zulu:
 	\item Hay que añadir el Java al \emph{path} del sistema.
 	\imagenConTamano{anexos/zulu2}{Configuración del sistema.}{0.7}
 	\imagenConTamano{anexos/zulu3}{Configuración del sistema.}{0.7}
-	\imagen{anexos/zulu4}{Configuración del sistema.}
+	\imagen{anexos/zulu4}{\emph{Path} del sistema.}
 	\item Añadir la ruta del bin.
 	
 \end{itemize}
