Added option to archive course cache

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -130,11 +130,12 @@ btnLegend = Llegenda
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Tancar sessi\u00F3
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Tancar sessi\u00F3
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = calcular m\u00E0xim
 
@@ -777,6 +778,7 @@ menu.coursestats         = Course stats
 menu.edit                = Edita
 menu.exit                = Sortir
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = Exportar CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = Components
 tab.coursemodule         = M\u00F2duls del curs
 tab.enrolleduser         = Enrolled
 tab.event                = Esdeveniments
+tab.forum                = Forum
 tab.grades               = Graus
 tab.logs                 = Registres
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = Recents
 text.restoredefault      = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
 text.search              = Search
