--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -130,11 +130,12 @@ btnLegend = Legende
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Ausloggen
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Ausloggen
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = berechnen Sie max
 
@@ -777,6 +778,7 @@ menu.coursestats         = Course stats
 menu.edit                = Bearbeiten
 menu.exit                = Ausgang
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = CSV-Daten exportieren...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
 tab.enrolleduser         = Enrolled
 tab.event                = Veranstaltungen
+tab.forum                = Forum
 tab.grades               = Noten
 tab.logs                 = Protokolle
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = K\u00FCrzlich\r\n
 text.restoredefault      = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.search              = Search
