--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -130,11 +130,12 @@ btnLegend = Legend
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Logout
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Logout
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = Calculate max
 
@@ -777,6 +778,7 @@ menu.coursestats         = _Course stats
 menu.edit                = _Edit
 menu.exit                = _Close
 menu.exportconfig        = Ex_port configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = E_xport CSV data...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = Components
 tab.coursemodule         = Course Modules
 tab.enrolleduser         = Enrolled
 tab.event                = Events
+tab.forum                = Forum
 tab.grades               = Grades
 tab.logs                 = Logs
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = Recent
 text.restoredefault      = Are you sure you want to restore the default settings?
 text.search              = Search
