--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -130,11 +130,12 @@ btnLegend = Leyenda
 
 btnMean = Estad\u00EDsticas generales
 
-button.apply   = Aplicar
-button.logout  = Cerrar sesi\u00F3n
-button.restore = Restaurar valores por defecto
-button.save    = Guardar
-button.search  = Buscar
+button.apply     = Aplicar
+button.logout    = Cerrar sesi\u00F3n
+button.restore   = Restaurar valores por defecto
+button.save      = Guardar
+button.search    = Buscar
+button.selectall = Seleccionar todos
 
 calculateMax = Calcular m\u00E1ximo
 
@@ -777,6 +778,7 @@ menu.coursestats         = E_stad\u00EDsticas del curso
 menu.edit                = _Editar
 menu.exit                = _Salir
 menu.exportconfig        = Ex_portar configuraci\u00F3n...
+menu.exportcourse        = Archivar curso
 menu.exportcsv           = E_xportar datos CSV...
 menu.exportdashboard     = Exportar dashboard...
 menu.exportdefaultphotos = Con foto por defecto...
@@ -843,6 +845,7 @@ tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
 tab.enrolleduser         = Matriculados
 tab.event                = Eventos
+tab.forum                = Foro
 tab.grades               = Calificaciones
 tab.logs                 = Registros
 tab.noenrolleduser       = No matriculados
@@ -894,6 +897,7 @@ text.online_true         = Modo: Online
 text.origin              = Origen
 text.pass                = Aprobado
 text.past                = Pasados
+text.previouscache       = Cursos previos
 text.recent              = Recientes
 text.restoredefault      = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.search              = Buscar
