--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -130,11 +130,12 @@ btnLegend = L\u00E9gende
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Connectez - Out
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Connectez - Out
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = Calculer max
 
@@ -777,6 +778,7 @@ menu.coursestats         = Course stats
 menu.edit                = modifier
 menu.exit                = Sortie
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = Exporter des donn\u00E9es CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = Composants
 tab.coursemodule         = Modules de cours
 tab.enrolleduser         = Enrolled
 tab.event                = \u00C9v\u00E9nements
+tab.forum                = Forum
 tab.grades               = Les notes
 tab.logs                 = Les journaux
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = R\u00E9cente
 text.restoredefault      = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.search              = Search
