--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -130,11 +130,12 @@ btnLegend = Leggenda
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Disconnettersi
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Disconnettersi
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = Calcolare max
 
@@ -777,6 +778,7 @@ menu.coursestats         = Course stats
 menu.edit                = modificare
 menu.exit                = Uscita
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = Esporta dati CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = componenti
 tab.coursemodule         = Moduli del corso
 tab.enrolleduser         = Enrolled
 tab.event                = eventi
+tab.forum                = Forum
 tab.grades               = gradi
 tab.logs                 = logs
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = Recente
 text.restoredefault      = Sei sicuro di voler ripristinare le impostazioni di default?
 text.search              = Search
