--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -130,11 +130,12 @@ btnLegend = Lenda
 
 btnMean = General Stats
 
-button.apply   = Apply
-button.logout  = Sair
-button.restore = Restore Defaults
-button.save    = Save
-button.search  = Search
+button.apply     = Apply
+button.logout    = Sair
+button.restore   = Restore Defaults
+button.save      = Save
+button.search    = Search
+button.selectall = Select all
 
 calculateMax = Calcular max
 
@@ -777,6 +778,7 @@ menu.coursestats         = Course stats
 menu.edit                = Editar
 menu.exit                = Sa\u00EDda
 menu.exportconfig        = Export configuration...
+menu.exportcourse        = Archive course
 menu.exportcsv           = Exportar dados CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
@@ -843,6 +845,7 @@ tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos do curso
 tab.enrolleduser         = Enrolled
 tab.event                = Eventos
+tab.forum                = Forum
 tab.grades               = Notas
 tab.logs                 = Logs
 tab.noenrolleduser       = Not enrolled
@@ -894,6 +897,7 @@ text.online_true         = Mode: Online
 text.origin              = Origin
 text.pass                = Pass
 text.past                = Past
+text.previouscache       = Previous courses
 text.recent              = Recentes
 text.restoredefault      = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
 text.search              = Search
