Added clustering module

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -841,6 +841,7 @@ passGradeColor = Passing Grad Farbe
 secondInterval = Sekunden-Intervall
 
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
+tab.clustering           = Clustering
 tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
 tab.enrolleduser         = Enrolled
