--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -913,6 +913,7 @@ passGradeColor = Color de calificaci\u00F3n aprobada
 secondInterval = Segundo intervalo
 
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
+tab.clustering           = Clustering
 tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
 tab.enrolleduser         = Matriculados
