--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -841,6 +841,7 @@ passGradeColor = En passant la couleur de qualit\u00E9
 secondInterval = deuxi\u00E8me intervalle
 
 tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
+tab.clustering           = Clustering
 tab.component            = Composants
 tab.coursemodule         = Modules de cours
 tab.enrolleduser         = Enrolled
