--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -841,6 +841,7 @@ passGradeColor = Passant el color de grau
 secondInterval = segon interval
 
 tab.activityCompletion   = Compleci\u00F3 de l'activitat
+tab.clustering           = Clustering
 tab.component            = Components
 tab.coursemodule         = M\u00F2duls del curs
 tab.enrolleduser         = Enrolled
