--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -913,6 +913,7 @@ passGradeColor = Passing grade color
 secondInterval = Second interval
 
 tab.activityCompletion   = Activity Completion
+tab.clustering           = Clustering
 tab.component            = Components
 tab.coursemodule         = Course Modules
 tab.enrolleduser         = Enrolled
