--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -841,6 +841,7 @@ passGradeColor = Passando colore grade
 secondInterval = Secondo intervallo
 
 tab.activityCompletion   = Completamento attivit\u00E0
+tab.clustering           = Clustering
 tab.component            = componenti
 tab.coursemodule         = Moduli del corso
 tab.enrolleduser         = Enrolled
