Added option to import logs

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -858,6 +858,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _File
 menu.help                = _Help
 menu.importconfig        = _Import configuration...
+menu.importlogs          = I_mport logs
 menu.logout              = _Logout
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
