--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -786,6 +786,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _File
 menu.help                = Aiuto
 menu.importconfig        = Import configuration...
+menu.importlogs          = I_mport logs
 menu.logout              = Disconnettersi
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
