--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -786,6 +786,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _Arquivo
 menu.help                = Socorro
 menu.importconfig        = Import configuration...
+menu.importlogs          = I_mport logs
 menu.logout              = Sair
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
