Fixed bug when import logs

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -786,7 +786,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _Dossier
 menu.help                = Ajuda
 menu.importconfig        = Import configuration...
-menu.importlogs          = I_mport logs
+menu.importlogs          = I_mport logs...
 menu.logout              = Tancar sessi\u00F3
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
