--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -786,7 +786,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _Datei
 menu.help                = Hilfe
 menu.importconfig        = Import configuration...
-menu.importlogs          = I_mport logs
+menu.importlogs          = I_mport logs...
 menu.logout              = Ausloggen
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
