--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -858,7 +858,7 @@ menu.exportphotos        = Con fotos de usuarios...
 menu.file                = _Archivo
 menu.help                = A_yuda
 menu.importconfig        = _Importar configuraci\u00F3n...
-menu.importlogs          = I_mportar registros
+menu.importlogs          = I_mportar registros...
 menu.logout              = _Cerrar sesi\u00F3n
 menu.moreinfo            = _M\u00E1s informaci\u00F3n
 menu.photos              = Exportar fotos de los usuarios seleccionados...
