--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -786,7 +786,7 @@ menu.exportphotos        = With user photos...
 menu.file                = _Fichier
 menu.help                = Aidez-moi
 menu.importconfig        = Import configuration...
-menu.importlogs          = I_mport logs
+menu.importlogs          = I_mport logs...
 menu.logout              = Connectez - Out
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
